Finalização do parse de dados de operações